fix search bar on mobile

--- a/src/app/recipe/recipe.component.css
+++ b/src/app/recipe/recipe.component.css
@@ -4,6 +4,7 @@
 .recipe-header-media-query {
   display: flex;
   justify-content: space-between;
+  /* margin-left: 57px; */
   align-items: center;
   flex-direction: column-reverse;
 }
@@ -17,7 +18,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 60px;
+  margin-left: 60px;  
 }
 
 .recipe-title {
@@ -44,8 +45,14 @@
 }
 ul.ingredients-list {
   list-style-type: none;
+  /* margin-left: -10px; */
 }
-
+.num-ingreidents {
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+}
 .num-ingredients-container {
   display: flex;
   flex-direction: column;
@@ -54,7 +61,9 @@ ul.ingredients-list {
   display: flex;
   justify-content: space-between;
 }
-
+/* .serving-size {
+  background-color: #8ac926;
+} */
 .serving-size-number,
 .num {
   display: flex;
@@ -87,6 +96,7 @@ a:link {
   padding-left: 10px;
   margin-top: 10px;
   margin-bottom: 60px;
+  /* margin: 0px; */
 }
 .fa-heart {
   font-size: 200%;
@@ -95,11 +105,9 @@ a:link {
 }
 .black {
   color: black;
-  padding: 10px;
 }
 .red {
   color: #f94144;
-  padding: 10px;
 }
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
@@ -107,8 +115,11 @@ a:link {
     margin-left: 50px;
     margin-right: 50px;
     margin-bottom: 55px;
+    /* background-color: rgb(238, 238, 227, 0.3); */
   }
-
+  /* .recipe-header-mobile {
+    display: none;
+  } */
   .recipe-header-media-query {
     display: flex;
     flex-direction: column;
@@ -132,14 +143,16 @@ a:link {
   .red {
     color: #f94144;
   }
+  
 }
 @media all and (min-width: 1025px) {
   .recipe-content {
     margin-bottom: 55px;
     max-width: 1200px;
     margin: 0 auto;
+    /* background-color: rgb(238, 238, 227, 0.3); */
   }
-
+ 
   .recipe-header-media-query {
     display: flex;
     flex-direction: column;
@@ -166,4 +179,5 @@ a:link {
   .red {
     color: #f94144;
   }
+  
 }
