--- a/src/app/search-recipes/search-recipes.component.css
+++ b/src/app/search-recipes/search-recipes.component.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  padding-top: 50px;
 }
 .mobile-logo-container {
   margin-top: 60px;
@@ -24,6 +25,7 @@
   justify-content: flex-end;
   position: absolute;
   right: 13px;
+  padding-right: 12px;
 }
 .form {
   display: flex;
